# object_detection_realsense

./: CMakeLists.txt  height_detection.cpp  plane_det.cpp  prespektiva_zaloha.cpp
functions/: CMakeLists.txt  bounding_box.cpp  bounding_box.hpp  functions.cpp  functions.hpp  make_groups.cpp  make_groups.hpp
latex/: bakalarska_prace.aux  bakalarska_prace.bbl  bakalarska_prace.blg  bakalarska_prace.fdb_latexmk  bakalarska_prace.fls  bakalarska_prace.ilg  bakalarska_prace.lof  bakalarska_prace.out  bakalarska_prace.tex  bakalarska_prace.toc  citations.bib  ctutest.fdb_latexmk  ctuth-pkg.tex  ctuth-templates.tex  hello_world.aux  hello_world.bbl  hello_world.blg  hello_world.fdb_latexmk  hello_world.fls  hello_world.ilg  hello_world.lot  hello_world.out  hello_world.toc  texput.fls
latex/inputs/: ctu_setup.tex
latex/junk/: ctutest.aux  ctutest.blg  ctutest.fdb_latexmk  ctutest.fls  ctutest.lof  ctutest.lot  ctutest.out  ctutest.toc
matlab/: analyze_depth.m  analyzematlabddata  analyzematlabddata.m  corrected.txt  data.txt  depth.txt  eqs_line_spehere_intersection  eqs_line_spehere_intersection.m  matlab_to_c.py  solve_systems.m  test_rect.m  uncorrected.txt
